--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -30,10 +30,7 @@ server:
 app:
   upload:
     path: ./uploads
-    allowed-types:
-      - image/jpeg
-      - image/png
-      - image/webp
+    allowed-types: image/jpeg,image/jpg,image/png,image/webp
     thumbnail:
       width: 300
       height: 200 
